tweak css layout bug

--- a/packages/website/src/components/Layout.module.css
+++ b/packages/website/src/components/Layout.module.css
@@ -1,3 +1,6 @@
 .content {
   position: relative;
+
+  /* ensure content appears above spinning "X" */
+  z-index: 2;
 }
